SAT-Solver/expressions/expr.output
State 11 conflicts: 6 shift/reduce
State 13 conflicts: 6 shift/reduce
State 24 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: expression TK_END

    2 ligne: TK_MNS TK_VAR
    3      | TK_VAR
    4      | TK_BOOL
    5      | TK_LPAREN ligne TK_RPAREN
    6      | ligne TK_OU ligne
    7      | ligne TK_ET ligne
    8      | ligne TK_XOR ligne
    9      | ligne TK_IMP ligne
   10      | ligne TK_EQIV ligne
   11      | TK_TIL ligne
   12      | TK_COM ligne
   13      | ligne TK_COM

   14 expression: ligne
   15           | expression TK_BN ligne


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_OU (258) 6
TK_ET (259) 7
TK_BN (260) 15
TK_XOR (261) 8
TK_IMP (262) 9
TK_EQIV (263) 10
TK_LPAREN (264) 5
TK_RPAREN (265) 5
TK_TIL (266) 11
TK_MNS (267) 2
TK_END (268) 1
TK_COM (269) 12 13
TK_VAR (270) 2 3
TK_BOOL (271) 4


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
input (18)
    on left: 1, on right: 0
ligne (19)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13, on right: 5 6 7 8 9 10 11
    12 13 14 15
expression (20)
    on left: 14 15, on right: 1 15


state 0

    0 $accept: . input $end
    1 input: . expression TK_END
    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM
   14 expression: . ligne
   15           | . expression TK_BN ligne

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    input       go to state 7
    ligne       go to state 8
    expression  go to state 9


state 1

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    5      | TK_LPAREN . ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 10


state 2

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   11      | TK_TIL . ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 11


state 3

    2 ligne: TK_MNS . TK_VAR

    TK_VAR  shift, and go to state 12


state 4

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   12      | TK_COM . ligne
   13      | . ligne TK_COM

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 13


state 5

    3 ligne: TK_VAR .

    $default  reduce using rule 3 (ligne)


state 6

    4 ligne: TK_BOOL .

    $default  reduce using rule 4 (ligne)


state 7

    0 $accept: input . $end

    $end  shift, and go to state 14


state 8

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM
   14 expression: ligne .  [TK_BN, TK_END]

    TK_OU    shift, and go to state 15
    TK_ET    shift, and go to state 16
    TK_XOR   shift, and go to state 17
    TK_IMP   shift, and go to state 18
    TK_EQIV  shift, and go to state 19
    TK_COM   shift, and go to state 20

    $default  reduce using rule 14 (expression)


state 9

    1 input: expression . TK_END
   15 expression: expression . TK_BN ligne

    TK_BN   shift, and go to state 21
    TK_END  shift, and go to state 22


state 10

    5 ligne: TK_LPAREN ligne . TK_RPAREN
    6      | ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_OU      shift, and go to state 15
    TK_ET      shift, and go to state 16
    TK_XOR     shift, and go to state 17
    TK_IMP     shift, and go to state 18
    TK_EQIV    shift, and go to state 19
    TK_RPAREN  shift, and go to state 23
    TK_COM     shift, and go to state 20


state 11

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   11      | TK_TIL ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_EQIV, TK_RPAREN, TK_END, TK_COM]
   13      | ligne . TK_COM

    TK_OU    shift, and go to state 15
    TK_ET    shift, and go to state 16
    TK_XOR   shift, and go to state 17
    TK_IMP   shift, and go to state 18
    TK_EQIV  shift, and go to state 19
    TK_COM   shift, and go to state 20

    TK_OU     [reduce using rule 11 (ligne)]
    TK_ET     [reduce using rule 11 (ligne)]
    TK_XOR    [reduce using rule 11 (ligne)]
    TK_IMP    [reduce using rule 11 (ligne)]
    TK_EQIV   [reduce using rule 11 (ligne)]
    TK_COM    [reduce using rule 11 (ligne)]
    $default  reduce using rule 11 (ligne)


state 12

    2 ligne: TK_MNS TK_VAR .

    $default  reduce using rule 2 (ligne)


state 13

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   12      | TK_COM ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_EQIV, TK_RPAREN, TK_END, TK_COM]
   13      | ligne . TK_COM

    TK_OU    shift, and go to state 15
    TK_ET    shift, and go to state 16
    TK_XOR   shift, and go to state 17
    TK_IMP   shift, and go to state 18
    TK_EQIV  shift, and go to state 19
    TK_COM   shift, and go to state 20

    TK_OU     [reduce using rule 12 (ligne)]
    TK_ET     [reduce using rule 12 (ligne)]
    TK_XOR    [reduce using rule 12 (ligne)]
    TK_IMP    [reduce using rule 12 (ligne)]
    TK_EQIV   [reduce using rule 12 (ligne)]
    TK_COM    [reduce using rule 12 (ligne)]
    $default  reduce using rule 12 (ligne)


state 14

    0 $accept: input $end .

    $default  accept


state 15

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    6      | ligne TK_OU . ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 24


state 16

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    7      | ligne TK_ET . ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 25


state 17

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    8      | ligne TK_XOR . ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 26


state 18

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
    9      | ligne TK_IMP . ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 27


state 19

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   10      | ligne TK_EQIV . ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 28


state 20

   13 ligne: ligne TK_COM .

    $default  reduce using rule 13 (ligne)


state 21

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM
   15 expression: expression TK_BN . ligne

    TK_LPAREN  shift, and go to state 1
    TK_TIL     shift, and go to state 2
    TK_MNS     shift, and go to state 3
    TK_COM     shift, and go to state 4
    TK_VAR     shift, and go to state 5
    TK_BOOL    shift, and go to state 6

    ligne  go to state 29


state 22

    1 input: expression TK_END .

    $default  reduce using rule 1 (input)


state 23

    5 ligne: TK_LPAREN ligne TK_RPAREN .

    $default  reduce using rule 5 (ligne)


state 24

    6 ligne: ligne . TK_OU ligne  [TK_OU, TK_BN, TK_RPAREN, TK_END, TK_COM]
    6      | ligne TK_OU ligne .  [TK_OU, TK_BN, TK_RPAREN, TK_END, TK_COM]
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_ET    shift, and go to state 16
    TK_XOR   shift, and go to state 17
    TK_IMP   shift, and go to state 18
    TK_EQIV  shift, and go to state 19
    TK_COM   shift, and go to state 20

    TK_COM    [reduce using rule 6 (ligne)]
    $default  reduce using rule 6 (ligne)

    Conflict between rule 6 and token TK_OU resolved as reduce (%left TK_OU).
    Conflict between rule 6 and token TK_ET resolved as shift (TK_OU < TK_ET).
    Conflict between rule 6 and token TK_XOR resolved as shift (TK_OU < TK_XOR).
    Conflict between rule 6 and token TK_IMP resolved as shift (TK_OU < TK_IMP).
    Conflict between rule 6 and token TK_EQIV resolved as shift (TK_OU < TK_EQIV).


state 25

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne  [TK_OU, TK_ET, TK_BN, TK_RPAREN, TK_END, TK_COM]
    7      | ligne TK_ET ligne .  [TK_OU, TK_ET, TK_BN, TK_RPAREN, TK_END, TK_COM]
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_XOR   shift, and go to state 17
    TK_IMP   shift, and go to state 18
    TK_EQIV  shift, and go to state 19
    TK_COM   shift, and go to state 20

    TK_COM    [reduce using rule 7 (ligne)]
    $default  reduce using rule 7 (ligne)

    Conflict between rule 7 and token TK_OU resolved as reduce (TK_OU < TK_ET).
    Conflict between rule 7 and token TK_ET resolved as reduce (%left TK_ET).
    Conflict between rule 7 and token TK_XOR resolved as shift (TK_ET < TK_XOR).
    Conflict between rule 7 and token TK_IMP resolved as shift (TK_ET < TK_IMP).
    Conflict between rule 7 and token TK_EQIV resolved as shift (TK_ET < TK_EQIV).


state 26

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_RPAREN, TK_END, TK_COM]
    8      | ligne TK_XOR ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_RPAREN, TK_END, TK_COM]
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_IMP   shift, and go to state 18
    TK_EQIV  shift, and go to state 19
    TK_COM   shift, and go to state 20

    TK_COM    [reduce using rule 8 (ligne)]
    $default  reduce using rule 8 (ligne)

    Conflict between rule 8 and token TK_OU resolved as reduce (TK_OU < TK_XOR).
    Conflict between rule 8 and token TK_ET resolved as reduce (TK_ET < TK_XOR).
    Conflict between rule 8 and token TK_XOR resolved as reduce (%left TK_XOR).
    Conflict between rule 8 and token TK_IMP resolved as shift (TK_XOR < TK_IMP).
    Conflict between rule 8 and token TK_EQIV resolved as shift (TK_XOR < TK_EQIV).


state 27

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_RPAREN, TK_END, TK_COM]
    9      | ligne TK_IMP ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_RPAREN, TK_END, TK_COM]
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_EQIV  shift, and go to state 19
    TK_COM   shift, and go to state 20

    TK_COM    [reduce using rule 9 (ligne)]
    $default  reduce using rule 9 (ligne)

    Conflict between rule 9 and token TK_OU resolved as reduce (TK_OU < TK_IMP).
    Conflict between rule 9 and token TK_ET resolved as reduce (TK_ET < TK_IMP).
    Conflict between rule 9 and token TK_XOR resolved as reduce (TK_XOR < TK_IMP).
    Conflict between rule 9 and token TK_IMP resolved as reduce (%left TK_IMP).
    Conflict between rule 9 and token TK_EQIV resolved as shift (TK_IMP < TK_EQIV).


state 28

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_EQIV, TK_RPAREN, TK_END, TK_COM]
   10      | ligne TK_EQIV ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_EQIV, TK_RPAREN, TK_END, TK_COM]
   13      | ligne . TK_COM

    TK_COM  shift, and go to state 20

    TK_COM    [reduce using rule 10 (ligne)]
    $default  reduce using rule 10 (ligne)

    Conflict between rule 10 and token TK_OU resolved as reduce (TK_OU < TK_EQIV).
    Conflict between rule 10 and token TK_ET resolved as reduce (TK_ET < TK_EQIV).
    Conflict between rule 10 and token TK_XOR resolved as reduce (TK_XOR < TK_EQIV).
    Conflict between rule 10 and token TK_IMP resolved as reduce (TK_IMP < TK_EQIV).
    Conflict between rule 10 and token TK_EQIV resolved as reduce (%left TK_EQIV).


state 29

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM
   15 expression: expression TK_BN ligne .  [TK_BN, TK_END]

    TK_OU    shift, and go to state 15
    TK_ET    shift, and go to state 16
    TK_XOR   shift, and go to state 17
    TK_IMP   shift, and go to state 18
    TK_EQIV  shift, and go to state 19
    TK_COM   shift, and go to state 20

    $default  reduce using rule 15 (expression)
